@@ -1097,13 +1097,13 @@ if (! $excel) {
             new reader_menu_item('changenumberofsectionsinquiz', 'managebooks', 'admin.php', array('a' => 'admin', 'id' => $id, 'tab' => $tab, 'act' => 'changenumberofsectionsinquiz')),
         ),
         'attemptscoremanagement' => array(
-            //new reader_menu_item('viewattempts', 'manageusers', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'viewattempts')),
-            //new reader_menu_item('awardextrapoints', 'manageusers', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'awardextrapoints')),
-            //new reader_menu_item('assignpointsbookshavenoquizzes', 'manageusers', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'assignpointsbookshavenoquizzes')),
-            new reader_menu_item('viewattempts', 'manageusers', 'admin/reports.php', array('id' => $id, 'tab' => 32, 'mode' => 'userdetailed')),
-            new reader_menu_item('awardextrapoints', 'manageusers', 'admin/reports.php', array('id' => $id, 'tab' => 31, 'mode' => 'usersummary')),
-            new reader_menu_item('assignpointsbookshavenoquizzes', 'manageusers', 'admin/reports.php', array('id' => $id, 'tab' => 31, 'mode' => 'usersummary')),
-            new reader_menu_item('adjustscores', 'manageusers', 'admin.php', array('a' => 'admin', 'id' => $id, 'tab' => $tab, 'act' => 'adjustscores')),
+            //new reader_menu_item('viewattempts', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'viewattempts')),
+            //new reader_menu_item('awardextrapoints', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'awardextrapoints')),
+            //new reader_menu_item('assignpointsbookshavenoquizzes', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'act' => 'assignpointsbookshavenoquizzes')),
+            new reader_menu_item('viewattempts', 'manageattempts', 'admin/reports.php', array('id' => $id, 'tab' => 32, 'mode' => 'userdetailed')),
+            new reader_menu_item('awardextrapoints', 'manageattempts', 'admin/reports.php', array('id' => $id, 'tab' => 31, 'mode' => 'usersummary')),
+            new reader_menu_item('assignpointsbookshavenoquizzes', 'manageattempts', 'admin/reports.php', array('id' => $id, 'tab' => 31, 'mode' => 'usersummary')),
+            new reader_menu_item('adjustscores', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'tab' => $tab, 'act' => 'adjustscores')),
             new reader_menu_item('checksuspiciousactivity', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'tab' => $tab, 'act' => 'checksuspiciousactivity')),
             new reader_menu_item('viewlogsuspiciousactivity', 'manageattempts', 'admin.php', array('a' => 'admin', 'id' => $id, 'tab' => $tab, 'act' => 'viewlogsuspiciousactivity')),
         ),
