@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2023-02-18 (39)
+ - fix permissions for displaying and acceessing the checkboxes on reports pages
+
 2022-05-11 (38)
  - add message to CHANGES.txt
 
